--- a/package.json
+++ b/package.json
@@ -6,12 +6,18 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "eslint"
+    "lint": "eslint",
+    "test-agent": "tsx scripts/agent.ts",
+    "simulate": "tsx scripts/simulation.ts"
   },
   "dependencies": {
+    "@ai-sdk/openai": "^3.0.23",
+    "ai": "^6.0.64",
+    "dotenv": "^17.2.3",
     "next": "16.1.6",
     "react": "19.2.3",
-    "react-dom": "19.2.3"
+    "react-dom": "19.2.3",
+    "tsx": "^4.21.0"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
